# traefik-dns-rs

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  rust.yml
src/: main.rs  rate_limit.rs  settings.rs  updater.rs
src/dns/: cloudflare.rs  mod.rs  route53.rs
src/router/: mod.rs  traefik.rs
