[package]
name = "traefik-dns"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["aws", "cf"]

aws = ["aws-config", "aws-sdk-route53"]
cf = ["cloudflare"]

[dependencies]
async-trait = "0.1.57"
aws-config = { version = "0.55.1", optional = true }
aws-sdk-route53 = { version = "0.22.0", optional = true }
build-info = "0.0.29"
cloudflare = { version = "0.9.1", optional = true, default-features = false, features = ["rustls-tls"] }
futures = "0.3.24"
humantime = "2.1.0"
once_cell = "1.16.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
shellexpand = "2.1.2"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
url = "2.3.1"

[dev-dependencies]
aws-smithy-client = { version = "0.52.0", features = ["test-util"] }
aws-smithy-http = "0.52.0"
aws-types = { version = "0.52.0", features = ["hardcoded-credentials"] }
http = "0.2.8"
httptest = "0.15.4"
mockall = "0.11.3"

[build-dependencies]
build-info-build = "0.0.29"
