[package]
name = "traefik-dns"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["aws", "cf"]

aws = ["aws-config", "aws-sdk-route53", "aws-smithy-http"]
cf = ["cloudflare"]

[dependencies]
async-trait = "0.1"
aws-config = { version = "0.55", optional = true }
aws-sdk-route53 = { version = "0.28", optional = true }
aws-smithy-http = { version = "0.55", optional = true }
cloudflare = { version = "0.10.1", optional = true, default-features = false, features = ["rustls-tls"] }
directories = "5.0"
futures = "0.3"
humantime = "2.1"
once_cell = "1.18"
regex = "1.9"
reqwest = { version = "0.11", features = ["json", "rustls-native-certs"], default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.31", features = ["full"] }
toml = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = "2.4"

[dev-dependencies]
aws-credential-types = { version = "0.55", features = ["hardcoded-credentials"] }
aws-smithy-client = { version = "0.55", features = ["test-util"] }
aws-types = "0.55"
http = "0.2"
httptest = "0.15"
mockall = "0.11"
